force-app/main/default/objects/StudentObj__c/StudentObj__c.object-meta.xml
<CustomObject>
    <label>StudentObj</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>