force-app/main/default/objects/StudentObj__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cs</fullName>
            </value>
            <value>
                <fullName>bca</fullName>
            </value>
            <value>
                <fullName>mca</fullName>
            </value>
            <value>
                <fullName>mba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>