force-app/main/default/objects/StudentObj__c/fields/Discount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Discount_Requested__c</fullName>
    <label>Discount Requested</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>