force-app/main/default/objects/StudentObj__c/fields/Father_Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Father_Aadhar_Number__c</fullName>
    <label>Father Aadhar Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>