force-app/main/default/objects/StudentObj__c/recordTypes/PG_courses.recordType-meta.xml
<RecordType>
    <fullName>PG_courses</fullName>
    <active>true</active>
    <label>PG courses</label>
</RecordType>