force-app/main/default/objects/StudentObj__c/recordTypes/UG_Courses.recordType-meta.xml
<RecordType>
    <fullName>UG_Courses</fullName>
    <active>true</active>
    <label>UG Courses</label>
</RecordType>